transaction query fixed