@@ -1,6 +1,9 @@
 package com.fintrack.controller;
 
 import com.fintrack.service.AccountService;
+
+import jakarta.servlet.http.HttpServletRequest;
+
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -20,14 +23,21 @@ public class AccountController {
     }
 
     @GetMapping("/current")
-    public ResponseEntity<Map<String, UUID>> getCurrentAccountId(@RequestParam String userId) {
+    public ResponseEntity<Map<String, String>> getCurrentAccountId(HttpServletRequest request) {
+        // Retrieve the userId from the session (or token)
+        String userId = (String) request.getSession().getAttribute("userId"); // Example: Retrieve userId from session
+
+        if (userId == null) {
+            return ResponseEntity.badRequest().body(Map.of("error", "User not logged in"));
+        }
+
         // Fetch the accountId associated with the userId
-        UUID accountId = accountService.getAccountIdByUserId(userId);
+        String accountId = accountService.getAccountIdByUserId(userId);
 
         if (accountId == null) {
-          return ResponseEntity.status(404).body(Collections.singletonMap("error", null));
-      }
+            return ResponseEntity.status(404).body(Map.of("error", "Account ID not found"));
+        }
 
-      return ResponseEntity.ok(Collections.singletonMap("accountId", accountId));
+        return ResponseEntity.ok(Map.of("accountId", accountId));
     }
 }
